[package]
name = "snare"
description = "GitHub webhooks runner daemon"
version = "0.4.5"
homepage = "https://tratt.net/laurie/src/snare/"
repository = "https://github.com/softdevteam/snare/"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["development-tools"]
keywords = ["github", "webhook"]
edition = "2018"

[build-dependencies]
cfgrammar = "0.11"
lrlex = "0.11"
lrpar = "0.11"
rerun_except = "1.0"

[dependencies]
cfgrammar = "0.11"
crypto-common = "0.1"
crypto-mac = "0.11"
getopts = "0.2"
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
json = "0.12"
libc = "0.2"
lrlex = "0.11"
lrpar = "0.11"
nix = "0.23"
num_cpus = "1.12"
percent-encoding = "2.1"
regex = "1.5"
secstr = "0.5"
sha-1 = "0.10"
signal-hook = "0.3"
tempfile = "3.1"
tokio = { version = "1.12", features = ["full"] }
users = "0.11"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
