[package]
name = "snare"
description = "GitHub webhooks runner daemon"
version = "0.4.9"
homepage = "https://tratt.net/laurie/src/snare/"
repository = "https://github.com/softdevteam/snare/"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["development-tools"]
keywords = ["github", "webhook"]
edition = "2018"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
rerun_except = "1.0"

[dependencies]
cfgrammar = "0.13"
crypto-common = "0.1"
crypto-mac = "0.11"
getopts = "0.2"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
log = "0.4"
lrlex = "0.13"
lrpar = "0.13"
nix = "0.26"
num_cpus = "1"
percent-encoding = "2"
pwd = "1"
regex = "1.7"
secstr = "0.5"
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"
stderrlog = "0.5"
syslog = "6"
tempfile = "3"

[dev-dependencies]
escargot = "0.5"
wait-timeout = "0.2"

[features]
default = []
_internal_testing = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
